--- a/index.HTML
+++ b/index.HTML
@@ -24,7 +24,10 @@
         <li><a href="#" class="active" onclick="showTab('home')">Home</a></li>
         <li><a href="#" onclick="showTab('about')">About Me</a></li>
         <li><a href="#" onclick="showTab('projects')">Projects</a></li>
-        <li><a href="#" onclick="showTab('certs')">Certifications</a></li>
+        <li><a href="#" onclick="showTab('certs')">Education and Experience</a></li>
+        <li><a href="#" onclick="showTab('discu')">Discussion</a></li>
+        <li><a href="#" onclick="showTab('recruiter')">Interview Q/A</a></li>
+        <li><a href="#" onclick="showTab('learning')">LLM Oracle</a></li>
         <li><a href="#" onclick="showTab('contact')">Contact</a></li>
       </ul>
     </nav>
@@ -58,6 +61,12 @@
         This site showcases my background, major projects, certifications, and the services I offer in Oracle development, performance tuning, PL/SQL programming, and data integration.
       </p>
       <p>
+        This site offers a comprehensive overview of my professional journey — including major projects, certifications, and the specialized services I offer in areas like Oracle-based application development, database performance optimization, and integration of legacy systems with modern platforms.ssss
+      </p>
+      <p>
+        I am currently seeking opportunities to work abroad and bring my technical expertise, analytical mindset, and problem-solving capabilities to international teams and organizations. I’m particularly interested in roles where I can contribute to digital transformation initiatives and collaborate on innovative enterprise solutions in a global environment.
+      </p>
+      <p>
         Feel free to explore the tabs above to learn more about my experience and achievements. If you’d like to connect or collaborate, don’t hesitate to reach out via the contact section.
       </p>
     </section>
@@ -66,7 +75,7 @@
       <h2>About Me</h2>
       <p><strong>Name:</strong> Nadir Ali</p>
       <p><strong>Title:</strong> Senior Oracle Developer</p>
-      <p><strong>Experience:</strong> 10+ years</p>
+      <p><strong>Experience:</strong> 13+ years</p>
       <p><strong>Expertise:</strong> Oracle PL/SQL, SQL, Forms & Reports, ERP, ETL Pipelines, Performance Tuning, Data Security</p>
       <p>
         I am a results-driven Oracle Developer with a strong track record of delivering enterprise-grade database solutions. I specialize in designing scalable PL/SQL logic, optimizing reports, integrating ERP modules, and building secure, performance-optimized systems.
@@ -74,8 +83,95 @@
       <p>
         Passionate about data integrity, performance, and elegant software design, I aim to bring innovation and structure to every project I lead or support.
       </p>
+      <p>Over the years, I have worked on a wide range of mission-critical projects involving Oracle Forms & Reports, PL/SQL, performance tuning, data migration, and ERP customizations. My expertise spans industries such as finance, manufacturing, and telecommunications, where I have played a key role in streamlining data workflows, enhancing system performance, and delivering scalable database solutions tailored to complex business needs.</p>
       <a href="Nadir_Ali_Resume.pdf" target="_blank" class="resume-button">📄 Download My Resume</a>
     </section>
+
+    <section id="projects" class="tab-content" style="display:none;">
+  <h2>Projects and Utilities Info</h2>
+  <table class="styled-table">
+    <thead>
+      <tr>
+        <th>Oracle</th>
+        <th>Python</th>
+        <th>Others</th>
+        <th>Links</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Forms and Reports</td>
+        <td>Maria Anders</td>
+        <td>Germany</td>
+        <td>To be added</td>
+      </tr>
+      <tr>
+        <td>SQL</td>
+        <td>Francisco Chang</td>
+        <td>Mexico</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
+
+
+<section id="certs" class="tab-content" style="display:none;">
+      <h3>Academic</h3>
+      <p> Educational Degrees &nbsp   <a href="Educational_Background.rar" target="_blank" class="resume-button">📄 Download My Degrees</a></a> </p>
+      <h3>Experience</h3>
+      <p> Experience Letters &nbsp &nbsp &nbsp   <a href="Experience_Certificates.rar" target="_blank" class="resume-button">📄 Download My Letters</a></a> </p>
+      <h3>Diploma in Oracle Suite</h3>
+      <p> Diploma &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp   <a href="Oracle_Diploma.jpg" target="_blank" class="resume-button">📄 Download My Diploma</a></a> </p>
+      
+    </section>
+  
+  <section id="discu" class="tab-content" style="display:none;">
+      <h3>Under Modification</h3>
+  
+    </section>
+
+    <section id="recruiter" class="tab-content" style="display:none;">
+      <h3>Under Modification</h3>
+ 
+    </section>
+
+   
+
+  <section id="learning" class="tab-content" style="display:none;">
+      <h3>LLM Model</h3>
+      <iframe 
+  src="https://orachamp1981-oracle-llm.hf.space" 
+  width="100%" 
+  height="650px" 
+  frameborder="0" 
+  style="border: 1px solid #ccc; border-radius: 8px;"
+  allowfullscreen>
+</iframe>
+ 
+    </section>
+
+    
+  <section id="contact" class="tab-content" style="display:none;">
+  <h2>Get in Touch</h2>
+  <p>Feel free to reach out through any of the platforms below:</p>
+
+  <div class="contact-icons">
+    <a href="https://wa.me/923318102458" target="_blank" title="WhatsApp">
+      <i class="fab fa-whatsapp"></i><span>WhatsApp</span>
+    </a>
+    <a href="https://www.linkedin.com/in/nadir-ali-02095318/" target="_blank" title="LinkedIn">
+      <i class="fab fa-linkedin"></i><span>LinkedIn</span>
+    </a>
+    <a href="mailto:nadir.ali81@hotmail.com" title="Email">
+      <i class="fas fa-envelope"></i><span>Email</span>
+    </a>
+    <a href="https://github.com/orachamp1981/orachamp1981" target="_blank" title="GitHub">
+      <i class="fab fa-github"></i><span>GitHub</span>
+    </a>
+  </div>
+</section>
+
+
   </main>
 
   <!-- Right Contact Box -->
